# stemtrace

./: .bumpversion.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.e2e  Makefile  README.md  build_ui.py  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  e2e.yml  release.yml
examples/: celery_app.py  fastapi_integration.py  with_auth.py  with_login.py
src/celery_flow/: __init__.py
src/celery_flow/core/: __init__.py  events.py  graph.py
src/celery_flow/server/: __init__.py  __main__.py  consumer.py  store.py  websocket.py
src/celery_flow/server/api/: __init__.py  routes.py  schemas.py  websocket.py
src/celery_flow/server/fastapi/: __init__.py  auth.py  extension.py  router.py
src/celery_flow/server/ui/: __init__.py  static.py
src/celery_flow/server/ui/frontend/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
src/celery_flow/server/ui/frontend/src/: index.css  main.tsx
src/celery_flow/server/ui/frontend/src/api/: client.ts  queries.ts
src/celery_flow/server/ui/frontend/src/components/: Filters.tsx  TaskGraph.tsx  TaskList.tsx  TaskTimeline.tsx
src/celery_flow/server/ui/frontend/src/hooks/: useWebSocket.ts
src/celery_flow/server/ui/frontend/src/routes/: __root.tsx  graphs.$rootId.tsx  graphs.tsx  index.tsx  tasks.$taskId.tsx
src/celery_flow/server/ui/frontend/src/utils/: format.ts
src/celery_flow/server/ui/frontend/tests/: graphs.spec.ts  registry.spec.ts  task-detail.spec.ts
src/stemtrace/: __init__.py
src/stemtrace/core/: events.py
src/stemtrace/server/api/: routes.py  schemas.py
src/stemtrace/server/fastapi/: extension.py  form_auth.py  login_routes.py  router.py
src/stemtrace/server/ui/: static.py
src/stemtrace/server/ui/frontend/: package-lock.json  package.json
src/stemtrace/server/ui/frontend/src/api/: client.ts
src/stemtrace/server/ui/frontend/src/routes/: tasks.$taskId.tsx
tests/e2e/: __init__.py  conftest.py  tasks.py  test_api_e2e.py
tests/integration/: test_fastapi_integration.py  test_redis_transport.py  test_static_ui.py
tests/unit/: test_auth.py  test_bootsteps.py  test_config.py  test_consumer.py  test_examples.py  test_form_auth.py  test_form_login.py  test_graph.py  test_init.py  test_output_capture.py  test_routes.py  test_scrubbing.py  test_signals.py  test_store.py  test_transports.py  test_websocket.py
