[project]
name = "celery-flow"
version = "0.1.0"
description = "A lightweight Celery task flow visualizer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Ian Sokolskyi", email = "iansokolskyi@gmail.com" },
]
keywords = ["celery", "task", "queue", "visualization", "monitoring", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Celery",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "celery>=5.0.0",
    "pydantic>=2.0.0",
    "typing_extensions>=4.0.0",
    "redis>=4.0.0",
    "fastapi>=0.100.0",
    "typer>=0.9.0",
    "uvicorn[standard]>=0.20.0",
]

[project.optional-dependencies]
# Additional broker transports
rabbitmq = [
    "pika>=1.3.0",
]
# Development
dev = [
    "celery-flow[rabbitmq]",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "types-redis>=4.0.0",
    "hatchling>=1.20.0",  # For build hook IDE support
    "bump-my-version>=0.28.0",
    "httpx>=0.24.0",  # For FastAPI TestClient
]

[project.urls]
Homepage = "https://github.com/iansokolskyi/celery-flow"
Documentation = "https://github.com/iansokolskyi/celery-flow#readme"
Repository = "https://github.com/iansokolskyi/celery-flow"
Issues = "https://github.com/iansokolskyi/celery-flow/issues"
Changelog = "https://github.com/iansokolskyi/celery-flow/blob/main/CHANGELOG.md"

[project.scripts]
celery-flow = "celery_flow.server.__main__:main"

[build-system]
requires = ["hatchling", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/celery_flow"]
artifacts = [
    "src/celery_flow/server/ui/frontend/dist/**",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "build_ui.py"

# =============================================================================
# mypy
# =============================================================================
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "typer.*"
ignore_missing_imports = true

# =============================================================================
# ruff
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific
    "D",      # pydocstyle
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["celery_flow"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ARG"]  # No docstrings required in tests

# =============================================================================
# pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: requires running services (Redis, Celery)",
    "e2e: end-to-end tests (slow, requires Docker)",
    "slow: tests that take > 1 second",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:celery.*",
]
asyncio_mode = "auto"

# =============================================================================
# coverage
# =============================================================================
[tool.coverage.run]
source = ["src/celery_flow"]
branch = true
omit = [
    "src/celery_flow/server/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "\\.\\.\\.",  # Protocol method stubs
    "class.*Protocol.*:",
]
